--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <title>frontend</title>
   </head>
   <body>
-    <app></app>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
